@@ -5,9 +5,13 @@ import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
+import org.springframework.cache.annotation.CachePut;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.redis.core.RedisTemplate;
+import org.springframework.data.redis.core.ValueOperations;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -107,12 +111,12 @@ public class ReservationService {
 	                ReservedHistDto reservedHistDto = new ReservedHistDto(reserved);
 	                List<ReservationDto> reservationDtoList = reserved.getReservationList()
 	                        .stream()
-	                        .map(ReservationDto::new) 
-	                        .collect(Collectors.toList());
+	                        .map(ReservationDto::new)
+	                        .toList(); 
 	                reservedHistDto.setReservationDtoList(reservationDtoList);
 	                return reservedHistDto;
 	            })
-	            .collect(Collectors.toList());
+	            .toList(); 
 
 	    Long totalCount = reservedRepository.countReserveds(userId);
 
@@ -121,23 +125,21 @@ public class ReservationService {
 	
 	//예약 정보(상세내역용) 가져오기 
 	@Transactional(readOnly = true)
-	public List<ReservedHistDto> getReservedHistDtoList(Long reservedId){
-		
-		List<ReservedHistDto> reservedHistDtoList = reservedRepository.findReservedId(reservedId)
-				.stream()
-				.map(reserved -> {
-					ReservedHistDto reservedHistDto = new ReservedHistDto(reserved);
-					List<ReservationDto> reservationDtoList = reserved.getReservationList()
-						.stream()
-						.map(ReservationDto::new)
-						.collect(Collectors.toList());
-					reservedHistDto.setReservationDtoList(reservationDtoList);
-					return reservedHistDto;
-					
-				})
-				.collect(Collectors.toList());
-		
-		return reservedHistDtoList;
+	public List<ReservedHistDto> getReservedHistDtoList(Long reservedId) {
+	    List<ReservedHistDto> reservedHistDtoList = reservedRepository.findReservedId(reservedId)
+	            .stream()
+	            .map(reserved -> {
+	                ReservedHistDto reservedHistDto = new ReservedHistDto(reserved);
+	                List<ReservationDto> reservationDtoList = reserved.getReservationList()
+	                        .stream()
+	                        .map(ReservationDto::new)
+	                        .toList();
+	                reservedHistDto.setReservationDtoList(reservationDtoList);
+	                return reservedHistDto;
+	            })
+	            .toList();
+
+	    return reservedHistDtoList;
 	}
 	
 	
